# ApexVision-Core

./: .env.example  .gitignore  README.es.md  README.md  ROADMAP.md  alembic.ini  conftest.py  docker-compose.yml  flower_config.py  package-lock.json  package.json  pip.text  pyproject.toml  requirements.txt  tsconfig.build.json
docker/: Dockerfile.api  Dockerfile.worker  init.sql  nginx.conf
examples/: README.md
examples/flutter/: apexvision_client.dart
examples/kotlin/: ApexVisionClient.kt
examples/nodejs/: examples.ts
examples/react/: apexvision-react.tsx
python/: celery_app.py  config.py  main.py  requirements.txt  setup.py
python/api/: deps.py
python/api/middleware/: auth.py  rate_limit.py  telemetry.py
python/api/routes/: batch.py  health.py  models.py  stream.py  vision.py
python/cache/: redis_client.py
python/core/: classifier.py  depth_estimator.py  detector.py  embedding_engine.py  face_analyzer.py  model_registry.py  ocr_engine.py  pipeline.py  segmentor.py
python/cython_ext/: nms.pyx  pixel_ops.pyx
python/db/: models.py  session.py
python/db/migrations/: env.py  script.py.mako
python/db/migrations/versions/: 20250101_0000_001_initial_initial.py  20250101_0100_002_model_metrics.py
python/schemas/: vision.py
python/storage/: delta_store.py  parquet_store.py
python/tasks/: batch_tasks.py  maintenance_tasks.py  vision_tasks.py
scripts/: build_cython.ps1  dev.js  seed_db.py
src/: index.ts
src/config/: index.ts
src/sdk/: apexvision.ts
src/utils/: logger.ts
src/workers/: job.worker.ts
tests/integration/: conftest.py  test_auth.py  test_batch_endpoints.py  test_health_endpoints.py  test_models_endpoints.py  test_vision_endpoints.py
tests/python/: test_batch_tasks.py  test_classifier.py  test_depth_estimator.py  test_detector.py  test_embedding_engine.py  test_face_analyzer.py  test_ocr_engine.py  test_pipeline_integration.py  test_segmentor.py  test_storage.py
tests/ts/: sdk.test.ts
